fix #9 - make overlay clickable on mobile devices close #9

--- a/src/layout.css
+++ b/src/layout.css
@@ -2,6 +2,7 @@
 html, body {
     height: 100%;
     width: 100%;
+    overflow: hidden;
     padding: 0;
     margin: 0;
     font-family: Roboto, sans-serif;
